[gd_scene load_steps=18 format=3 uid="uid://cyelmmna8w8kx"]

[ext_resource type="PackedScene" uid="uid://c5mjlw3q7b5hc" path="res://Scenes/board.tscn" id="1_4fud4"]
[ext_resource type="Script" path="res://Scripts/main.gd" id="1_gkm27"]
[ext_resource type="Script" path="res://Scripts/overlay.gd" id="2_hbnqp"]
[ext_resource type="PackedScene" uid="uid://dxiifjtd678no" path="res://Scenes/pieces.tscn" id="2_soavt"]
[ext_resource type="Script" path="res://Scripts/board_manager.gd" id="3_vm1ui"]
[ext_resource type="Script" path="res://Scripts/piece_creator.gd" id="5_60lbi"]
[ext_resource type="AudioStream" uid="uid://c51ysgi7xvxyn" path="res://Audio/move-self.mp3" id="6_non43"]
[ext_resource type="AudioStream" uid="uid://cv3ki7bssxmfr" path="res://Audio/capture.mp3" id="7_wvpun"]
[ext_resource type="AudioStream" uid="uid://brex314xgpkep" path="res://Audio/click.mp3" id="8_ekvrr"]
[ext_resource type="Texture2D" uid="uid://cxndm1yfia48q" path="res://Images/Pieces/wk.png" id="10_r0d6t"]
[ext_resource type="Theme" uid="uid://bhpgkbmfbdcqg" path="res://Themes/black_turn_label.tres" id="11_b2ar8"]
[ext_resource type="Texture2D" uid="uid://bbvb0saaucgbe" path="res://Images/Pieces/bk.png" id="11_ygvsp"]
[ext_resource type="Theme" uid="uid://dme0ouyllngy3" path="res://Themes/dark_bg_label.tres" id="12_88yax"]

[sub_resource type="Theme" id="Theme_0l35k"]
default_font_size = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_podh8"]
bg_color = Color(0.00566115, 0.00566117, 0.00566107, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7fqul"]
content_margin_right = 200.0
bg_color = Color(0.336608, 0.336608, 0.336608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8xm40"]
content_margin_right = 75.0
bg_color = Color(0.205117, 0.205117, 0.205117, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_gkm27")

[node name="Tooltips" type="Node2D" parent="."]
z_index = 2

[node name="Overlay" type="Node2D" parent="."]
top_level = true
z_index = 1
script = ExtResource("2_hbnqp")

[node name="Board" parent="." instance=ExtResource("1_4fud4")]
script = ExtResource("3_vm1ui")

[node name="Pieces" parent="." instance=ExtResource("2_soavt")]
top_level = true
z_index = 2
script = ExtResource("5_60lbi")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-150, -150)
anchor_mode = 0
zoom = Vector2(0.75, 0.75)

[node name="Sound" type="Node" parent="."]

[node name="move-self" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("6_non43")

[node name="capture" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("7_wvpun")

[node name="click" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("8_ekvrr")

[node name="Control" type="VBoxContainer" parent="."]
visible = false
top_level = true
custom_minimum_size = Vector2(150, 150)
offset_left = 1281.0
offset_top = 47.0
offset_right = 1763.0
offset_bottom = 403.0
alignment = 1

[node name="Restrictions" type="VBoxContainer" parent="."]
top_level = true
custom_minimum_size = Vector2(150, 150)
offset_left = 1732.0
offset_top = 9.0
offset_right = 1904.0
offset_bottom = 159.0

[node name="FreeMovement" type="CheckButton" parent="Restrictions"]
layout_mode = 2
button_pressed = true
text = "Free Movement"

[node name="Turn Restriction" type="CheckButton" parent="Restrictions"]
layout_mode = 2
button_pressed = true
text = "Free Turn
"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
offset_left = 1426.0
offset_top = 8.0
offset_right = 1722.0
offset_bottom = 166.0
scale = Vector2(1.5, 1.5)

[node name="Button" type="CheckButton" parent="VBoxContainer2"]
layout_mode = 2
text = "White King Check"
icon = ExtResource("10_r0d6t")
flat = true
alignment = 1
autowrap_mode = 3
expand_icon = true

[node name="Button2" type="CheckButton" parent="VBoxContainer2"]
layout_mode = 2
text = "Black King Check"
icon = ExtResource("11_ygvsp")
flat = true
alignment = 1
expand_icon = true

[node name="Button3" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "Clear Overlay"

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
offset_left = 26.0
offset_top = 1241.0
offset_right = 136.0
offset_bottom = 1307.0

[node name="Pixelate" type="CheckButton" parent="VBoxContainer3"]
layout_mode = 2
text = "Pixelate"

[node name="Vibrate" type="Button" parent="VBoxContainer3"]
layout_mode = 2
text = "Vibrate"

[node name="GameData" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="TurnNum" type="Label" parent="GameData"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GameData"]
layout_mode = 2

[node name="WhiteMoves" type="VBoxContainer" parent="GameData/HBoxContainer"]
layout_mode = 2

[node name="BlackMoves" type="VBoxContainer" parent="GameData/HBoxContainer"]
layout_mode = 2

[node name="Container" type="Panel" parent="."]
clip_contents = true
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1259.0
offset_top = 5.0
offset_right = 1587.0
offset_bottom = 425.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Container"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 1
offset_left = -14.0
offset_top = 3.0
offset_right = 316.0
offset_bottom = 423.0
mouse_filter = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="DevData" type="VBoxContainer" parent="Container/MarginContainer"]
z_index = 1
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource("Theme_0l35k")
theme_override_constants/separation = 0

[node name="Turn" type="Label" parent="Container/MarginContainer/DevData"]
layout_mode = 2
theme = ExtResource("11_b2ar8")
theme_override_colors/font_color = Color(0.99558, 0.99558, 0.99558, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_podh8")
text = "White"
vertical_alignment = 1

[node name="Index_Square" type="RichTextLabel" parent="Container/MarginContainer/DevData"]
custom_minimum_size = Vector2(300, 25)
layout_mode = 2
mouse_filter = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_7fqul")
text = "Square:
"
fit_content = true
autowrap_mode = 0
tab_size = 2
text_direction = 1

[node name="Index_Piece" type="Label" parent="Container/MarginContainer/DevData"]
layout_mode = 2
theme = ExtResource("12_88yax")
theme_override_styles/normal = SubResource("StyleBoxFlat_8xm40")
text = "Piece Index: "

[connection signal="toggled" from="Restrictions/FreeMovement" to="." method="_on_free_movement_toggled"]
[connection signal="toggled" from="Restrictions/Turn Restriction" to="." method="_on_turn_restriction_toggled"]
[connection signal="toggled" from="VBoxContainer2/Button" to="Pieces" method="_on_button_toggled"]
[connection signal="toggled" from="VBoxContainer2/Button2" to="Pieces" method="_on_button_2_toggled"]
[connection signal="pressed" from="VBoxContainer2/Button3" to="Overlay" method="_on_button_3_pressed"]
[connection signal="toggled" from="VBoxContainer3/Pixelate" to="Pieces" method="_on_pixelate_toggled"]
[connection signal="pressed" from="VBoxContainer3/Vibrate" to="Pieces" method="_on_vibrate_pressed"]
